# fast_api_openweathermap

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
main/: __main__.py  fethers.py  models.py  responses.py  settings.py
